# voice-diarization

./: .gitignore  CLAUDE.md  config.py  download_yt_clip.py  label_speakers.py  pyproject.toml  requirements.txt  run_all.py  save_models.py  speaker_db.py  transcribe.py  voice_diarization_project.md  win_compat.py
diarization/: CLAUDE.md  config.py  convert.py  diarize.py  enroll_speaker.py  match_speakers.py  requirements.txt  run_all.py  save_models.py
